--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,27 +28,27 @@
     }
 
     .theme-l-bg-1 {
-        @apply text-black;
+        @apply bg-slate-200;
     }
 
     .theme-l-bg-2 {
-        @apply text-gray-700;
+        @apply bg-slate-300;
     }
 
     .theme-l-bg-3 {
-        @apply text-gray-600;
+        @apply bg-slate-400;
     }
 
     .theme-d-bg-1 {
-        @apply text-white;
+        @apply bg-slate-800;
     }
 
     .theme-d-bg-2 {
-        @apply text-gray-300;
+        @apply bg-slate-700;
     }
 
     .theme-d-bg-3 {
-        @apply text-gray-500;
+        @apply bg-slate-600;
     }
 
     .theme-d-border {
