--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,22 @@
         @apply bg-slate-600 text-white;
     }
 
+    .theme-bg-link {
+        @apply text-white bg-indigo-700 hover:bg-indigo-800 transition-colors duration-150;
+    }
+
+    .theme-fg-link {
+        @apply text-indigo-700;
+    }
+
+    .theme-fg-active {
+        @apply text-amber-800 border-amber-500;
+    }
+
+    .theme-bg-active {
+        @apply bg-slate-800 text-white;
+    }
+
     /* LIGHT */
     .theme-l-fg-1 {
         @apply text-black dark:text-white;
