--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,11 @@
 
     /* SHARED */
     .theme-nav {
-        @apply bg-slate-600 text-white;
+        @apply bg-cyan-800 text-white;
     }
 
     .theme-bg-gradient {
-        background: radial-gradient(rgb(203 213 225), rgb(148 163 184));
+        background: radial-gradient(#E7E5E4, #D6D3D1);
     }
 
     .theme-bg-link {
@@ -39,7 +39,7 @@
     }
 
     .theme-l-bg-1 {
-        @apply bg-slate-200 dark:bg-slate-800;
+        @apply bg-stone-100 dark:bg-slate-800;
     }
 
     .theme-l-bg-2 {
@@ -47,7 +47,7 @@
     }
 
     .theme-l-border {
-        @apply border-slate-500 dark:border-slate-200;
+        @apply border-slate-400 dark:border-slate-200;
     }
 
     /* DARK */
