--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,68 +6,61 @@
 
     /* SHARED */
     .theme-nav {
-        @apply bg-cyan-800 text-white;
+        @apply bg-sky-800 text-white 
     }
 
     .theme-bg-gradient {
-        background: radial-gradient(#E7E5E4, #D6D3D1);
+        /*background: radial-gradient(#E7E5E4, #D6D3D1);*/
+        @apply bg-slate-200;
     }
 
     .theme-bg-link {
-        @apply text-white bg-blue-700 hover:bg-blue-800 transition-colors duration-200;
+        @apply text-white bg-sky-800 hover:bg-sky-700 transition-colors duration-200;
     }
 
     .theme-fg-link {
-        @apply text-blue-700;
-    }
-
-    .theme-fg-active {
-        @apply text-amber-800 border-amber-500;
-    }
-
-    .theme-bg-active {
-        @apply bg-slate-800 text-white;
+        @apply text-sky-700 hover:text-sky-700 transition-colors duration-200;
     }
 
     /* LIGHT */
     .theme-l-fg-1 {
-        @apply text-black dark:text-white;
+        @apply text-black
     }
 
     .theme-l-fg-2 {
-        @apply text-gray-600 dark:text-gray-400;
+        @apply text-slate-700
     }
 
     .theme-l-bg-1 {
-        @apply bg-stone-50 dark:bg-slate-800;
+        @apply bg-stone-50
     }
 
     .theme-l-bg-2 {
-        @apply bg-slate-400 dark:bg-slate-600;
+        @apply bg-sky-400
     }
 
     .theme-l-border {
-        @apply border-slate-400 dark:border-slate-200;
+        @apply border-sky-600
     }
 
     /* DARK */
     .theme-d-fg-1 {
-        @apply text-white dark:text-black;
+        @apply text-white
     }
 
     .theme-d-fg-2 {
-        @apply text-gray-400 dark:text-gray-600;
+        @apply text-slate-300
     }
 
     .theme-d-bg-1 {
-        @apply bg-slate-800 dark:bg-slate-200;
+        @apply bg-sky-700
     }
 
     .theme-d-bg-2 {
-        @apply bg-slate-600 dark:bg-slate-400;
+        @apply bg-sky-700
     }
 
     .theme-d-border {
-        @apply border-slate-200 dark:border-slate-500;
+        @apply border-sky-200
     }
 }
